5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1712_2508.log
== TEST (2019-05-13 18:48:34) 
-- CODE:
from math import*
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e=e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1


-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:49:07) 
-- CODE:
from math import*
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e=e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:49:13) 
-- CODE:
from math import*
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e=e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- EXECUTION TIME:
0.198816
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.53333333
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.54535286
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.54490807
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:49:20) 
-- CODE:
from math import*
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e=e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- EXECUTION TIME:
0.14337
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.53333333
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.54535286
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.54490807
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:03:55) 
-- CODE:
from math import*
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e=e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- EXECUTION TIME:
0.145394
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.53333333
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.54535286
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.54490807
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:08:02) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e=e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- EXECUTION TIME:
0.199478
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.53333333
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.54535286
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.54490807
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:08:16) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e=e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:08:21) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e=e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- EXECUTION TIME:
0.178277
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.53333333
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.54535286
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.54490807
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:56:25) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e=e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:59:07) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e=e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:59:21) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e=e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:59:25) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e=e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:59:36) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e=e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:59:44) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e=e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:59:55) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e=e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:00:00) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e=e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:00:05) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e=e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:00:09) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e=e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:00:19) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e=e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:00:45) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e= e+3
	else:
		e= e+(aux*(4/(d**(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
4.21755883
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:01:14) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e= e+3
	else:
		e= e+(aux*(4/(d*(d+1) * (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:02:57) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e= e+3
	else:
		e= e+(aux*(4/(d*(d+1)) * (d+2))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- ERROR:
File "XXXX", line 12
    if(aux==1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:03:08) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e= e+3
	else:
		e= e+(aux*(4/(d*(d+1)) * (d+2))
				if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- ERROR:
File "XXXX", line 12
    if(aux==1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:03:23) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e= e+3
	else:
		e= e+(aux*(4/(d*(d+1)) * (d+2))
		if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- ERROR:
File "XXXX", line 12
    if(aux==1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:03:23) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e= e+3
	else:
		e= e+(aux*(4/(d*(d+1)) * (d+2))
		if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- ERROR:
File "XXXX", line 12
    if(aux==1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:03:29) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e= e+3
	else:
		e= e+(aux*(4/(d*(d+1)) * (d+2))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- ERROR:
File "XXXX", line 12
    if(aux==1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:03:30) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e= e+3
	else:
		e= e+(aux*(4/(d*(d+1)) * (d+2))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- ERROR:
File "XXXX", line 12
    if(aux==1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:03:39) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e= e+3
	else:
		e= e+(aux*(4/(d*(d+1)) * (d+2))
	if(aux == 1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- ERROR:
File "XXXX", line 12
    if(aux == 1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:04:15) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e= e+3
	else:
		e= e+(aux*(4/(d*(d+1)) * (d+2)))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
6.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:04:28) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e= e+3
	else:
		e= e+(aux*(4/(d*(d+1)) * (d+2)))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
6.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:04:33) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e= e+3
	else:
		e= e+(aux*(4/(d*(d+1)) * (d+2)))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
6.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:05:04) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e=e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:05:41) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e= e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:05:49) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e= e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:06:06) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = 1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e= e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
2.46666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:06:21) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e= e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux = -1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
2.06666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:06:42) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e= e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:07:34) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e= e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:08:02) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e= e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:08:03) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e= e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:08:59) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e= e+(aux*(4/(d*(d+1)* (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:09:23) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e= e+(aux*(4/(d * (d+1) * (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:11:48) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e= e+(aux*(4/(d * (d+1))) * (d+2))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
6.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:12:31) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e= e+(aux*(4/(d * (d+1) * (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:13:52) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e= e+(aux*(4/(d * (d+1) * (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:14:01) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e= e+(aux*(4/(d * (d+1) * (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:14:58) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e= e+(aux*(4/(d * (d+1) * (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:15:48) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e= e+(aux*(4/(d * (d+1) * (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:19:06) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e= e+(aux*(4/(d * (d+1) * (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:19:15) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e= e+(aux*(4/(d * (d+1) * (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:19:18) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c==0):
		e=e+3
	else:
		e= e+(aux*(4/(d * (d+1) * (d+2))))
	if(aux==1):
		aux= -1
	else:
		aux =1
	c=c+1
	d=d+1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:28:03) 
-- CODE:
n=int(input("Digite os n termos: "))

c=0
d=0
e=0
aux = -1
while(c<n):
	if(c == 0):
		e= e + 3
	else:
		e = e + (aux * (4 / (d * (d + 1) * (d+2))))
		
	if(aux == 1):
		aux= -1
	else:
		aux =1
	c= c + 1
	d= d + 1
print(round(e,8))

-- OUTPUT:
3.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:51:08) 
-- CODE:
k= int(input("repeticao: "))
c=0
n=3
i=1
y=2
while(c<k):
	if(k>1):
		j=n+((-1**(i+1))*4/(2*(2+1)*(y+2)))
		else:
			j=n
		c+=1
		i+=1
		y+=2
print(round(j,8))
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:51:38) 
-- CODE:
k= int(input("repeticao: "))
c=0
n=3
i=1
y=2
while(c<k):
	if(k>1):
		j=n+((-1**(i+1))*4/(2*(2+1)*(y+2)))
	else:
		j=n
	c+=1
	i+=1
	y+=2
print(round(j,8))
-- OUTPUT:
2.94444444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 23:51:53) 
-- CODE:
k= int(input("repeticao: "))
c=0
n=3
i=1
y=2
while(c<k):
	if(k>1):
		j=n+((-1**(i+1))*4/(2*(2+1)*(y+2)))
	else:
		j=n
	c+=1
	i+=1
	y+=2
print(round(j,8))
-- EXECUTION TIME:
0.174064
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.94444444
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
2.98550725
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.98333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 23:53:27) 
-- CODE:
k= int(input("repeticao: "))
c=0
n=3
i=1
y=2
while(c<k):
	if(k>1):
		j=n+((-1**(i+1))*4/(2*(2+1)*(y+2)))
	else:
		j=n
	c+=1
	i+=1
	y+=2
print(round(j,8))
-- EXECUTION TIME:
0.148019
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.94444444
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
2.98550725
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.98333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:53:51) 
-- CODE:
k= int(input("repeticao: "))
c=0
n=3
i=1
y=2
while(c<k):
	if(k>1):
		j=n+((-1**(i+1))*4/(2*(2+1)*(y+2)))
	else:
		j=n
	c+=1
	i+=1
	y+=2
	j=j+w
print(round(j,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    j=j+w
NameError: name 'w' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:54:39) 
-- CODE:
k= int(input("repeticao: "))
c=0
n=3
i=1
y=2
while(c<k):
	if(k>1):
		j=n+((-1**(i+1))*4/(2*(2+1)*(y+2)))
	else:
		j=n
	c+=1
	i+=1
	y+=2
	j=j+w
print(round(j+n,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    j=j+w
NameError: name 'w' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:57:42) 
-- CODE:
k= int(input("repeticao: "))
c=0
n=3
i=1
y=2
while(c<k):
	if(k>1):
		j=n+((-1**(i+1))*4/(2*(2+1)*(y+2)))
	else:
		j=n
	c+=1
	i+=1
	y+=2
	j=j+w
print(round(j+n,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    j=j+w
NameError: name 'w' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:57:55) 
-- CODE:
k= int(input("repeticao: "))
c=0
n=3
i=1
y=2
while(c<k):
	if(k>1):
		j=n+((-1**(i+1))*4/(2*(2+1)*(y+2)))
	else:
		j=n
	c+=1
	i+=1
	y+=2
	j=j+n
print(round(j+n,8))
-- OUTPUT:
8.94444444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:58:03) 
-- CODE:
k= int(input("repeticao: "))
c=0
n=3
i=1
y=2
while(c<k):
	if(k>1):
		j=n+((-1**(i+1))*4/(2*(2+1)*(y+2)))
	else:
		j=n
	c+=1
	i+=1
	y+=2
	j=j+c
print(round(j+n,8))
-- OUTPUT:
10.94444444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:58:09) 
-- CODE:
k= int(input("repeticao: "))
c=0
n=3
i=1
y=2
while(c<k):
	if(k>1):
		j=n+((-1**(i+1))*4/(2*(2+1)*(y+2)))
	else:
		j=n
	c+=1
	i+=1
	y+=2
	j=j+w
print(round(j+n,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    j=j+w
NameError: name 'w' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 00:04:02) 
-- CODE:
k= int(input("repeticao: "))
c=1
n=3.0
i=1
y=0
j=0
while(c<k):
	if(k>1):
		h=(((-1)**(i+1)))
		a=(4/((y+2)*(y+3)*(y+4)))
		w=(h*a)
	else:
		j=n
	c+=1
	i+=1
	y+=2
	j=j+w
print(round(j+n,8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 00:04:14) 
-- CODE:
k= int(input("repeticao: "))
c=1
n=3.0
i=1
y=0
j=0
while(c<k):
	if(k>1):
		h=(((-1)**(i+1)))
		a=(4/((y+2)*(y+3)*(y+4)))
		w=(h*a)
	else:
		j=n
	c+=1
	i+=1
	y+=2
	j=j+w
print(round(j+n,8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 00:04:18) 
-- CODE:
k= int(input("repeticao: "))
c=1
n=3.0
i=1
y=0
j=0
while(c<k):
	if(k>1):
		h=(((-1)**(i+1)))
		a=(4/((y+2)*(y+3)*(y+4)))
		w=(h*a)
	else:
		j=n
	c+=1
	i+=1
	y+=2
	j=j+w
print(round(j+n,8))
-- EXECUTION TIME:
0.129005
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
